feat: changing classes for records where possible